--- a/WebApplication/Views/WebsiteUser/Register.cshtml
+++ b/WebApplication/Views/WebsiteUser/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CoreEntities.WebsiteUser
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
 @{
-    Layout = "_LayoutForm";
+    Layout = "_Layout";
 }
 
 <div class="row">
