--- a/AdminApp/Views/AdminUser/ViewOrders.cshtml
+++ b/AdminApp/Views/AdminUser/ViewOrders.cshtml
@@ -7,6 +7,9 @@
 
 <h2>View Orders</h2>
 
+<div>
+    <a asp-action="Index">Back to Home</a>
+</div>
 
 <table class="table">
     <thead>
@@ -50,8 +53,9 @@
                 </td>
                 <td>
                     <a asp-action="FlagOrder" asp-route-OrderId="@item.OrderId">Flag It</a> |
-                
-            </tr>
+                    <a asp-action="UnFlagOrder" asp-route-OrderId="@item.OrderId">UnFlag It</a>
+
+</tr>
         }
     </tbody>
 </table>
