--- a/WebApplication/Views/WebsiteUser/Index.cshtml
+++ b/WebApplication/Views/WebsiteUser/Index.cshtml
@@ -1,9 +1,24 @@
 ﻿
 @{
     Layout = "_Layout";
-    
+
 }
 
 <div>
     @ViewBag.Message
 </div>
+
+<div class="col-xs-10">
+    <div class="btn-group-lg">
+        <a href="@Url.Action("ViewUsers","AdminUser")"><button type="button" class="btn btn-secondary">Sell A New Product</button></a>
+        <a href="@Url.Action("ViewProducts","AdminUser")"><button type="button" class="btn btn-secondary">My Product Listing</button></a>
+        <a href="@Url.Action("ViewUsers","AdminUser")"><button type="button" class="btn btn-secondary">My Transaction History</button></a>
+        <a href="@Url.Action("ViewUsers","AdminUser")"><button type="button" class="btn btn-secondary">My Billing Info</button></a>
+        <a href="@Url.Action("ReviewsReceived","Review")"><button type="button" class="btn btn-secondary">Reviews Received</button></a>
+        <a href="@Url.Action("ReviewsWritten","Review")"><button type="button" class="btn btn-secondary">Reviews Written</button></a>
+        <a href="@Url.Action("ViewProducts","Product")"><button type="button" class="btn btn-secondary">View Products</button></a>
+
+    </div>
+
+</div>
+<a href="@Url.Action("Logout","AdminUser")"><button type="button" class="btn-secondary">Logout</button></a>
