--- a/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/Views/Home/Index.cshtml
@@ -1,3 +1,15 @@
-﻿@{
-    Layout = "_Layout";
+﻿
+@{
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<h2>Welcome to Ulectrics</h2>
+<div class="col-xs-10">
+    <h5>What best describes you ?</h5>
+    <div class="btn-group-lg">
+        <a href="@Url.Action("Register","WebsiteUser")"><button type="button" class="btn btn-secondary">New User</button></a>
+        <a href="@Url.Action("Login","WebsiteUser")"><button type="button" class="btn btn-secondary">Returning User</button></a>
+    </div>
+</div>
+
