--- a/WebApplication/wwwroot/css/site.css
+++ b/WebApplication/wwwroot/css/site.css
@@ -56,17 +56,17 @@ body.anonymous {
     width: 100%;
 }
 
-
 .btn {
     color: white;
     background-color: #0071BC;
     background-image: none;
     border-radius: 0;
-    width: 100%;
+    width: 60%;
     /*display: block;*/
     font-size: 18px;
     padding: 15px;
     border-color: #0071BC;
+    margin-bottom: 10px;
 }
 
     .btn:hover {
