--- a/AdminApp/Views/AdminUser/Index.cshtml
+++ b/AdminApp/Views/AdminUser/Index.cshtml
@@ -16,6 +16,8 @@
         <a href="@Url.Action("ViewOrders","AdminUser")"><button type="button" class="btn btn-secondary">View Orders</button></a>
         <a href="@Url.Action("ViewFacilities","AdminUser")"><button type="button" class="btn btn-secondary">View Facilities</button></a>
         <a href="@Url.Action("ViewFacilityEmployees","AdminUser")"><button type="button" class="btn btn-secondary">View Facility Employees</button></a>
+        <a href="@Url.Action("ViewProductTypes","AdminUser")"><button type="button" class="btn btn-secondary">View Product Types</button></a>
+        <a href="@Url.Action("ViewProductCategories","AdminUser")"><button type="button" class="btn btn-secondary">View Product Categories</button></a>
     </div>
     
 </div>
