--- a/AdminApp/Views/AdminUser/ViewProductCategories.cshtml
+++ b/AdminApp/Views/AdminUser/ViewProductCategories.cshtml
@@ -6,7 +6,9 @@
 }
 
 <h2>View Product Categories</h2>
-
+<div>
+    <a asp-action="Index">Back to Home</a>
+</div>
 <p>
     <a asp-action="CreateProductCategory">Create New</a>
 </p>
