--- a/AdminApp/Views/AdminUser/EditFacility.cshtml
+++ b/AdminApp/Views/AdminUser/EditFacility.cshtml
@@ -47,7 +47,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to Home</a>
 </div>
 
 @*@section Scripts {
