--- a/AdminApp/Views/AdminUser/ViewProductTypes.cshtml
+++ b/AdminApp/Views/AdminUser/ViewProductTypes.cshtml
@@ -6,7 +6,9 @@
 }
 
 <h2>View Product Types</h2>
-
+<div>
+    <a asp-action="Index">Back to Home</a>
+</div>
 <p>
     <a asp-action="CreateProductTypes">Create New</a>
 </p>
