--- a/WebApplication/Views/WebsiteUser/Index.cshtml
+++ b/WebApplication/Views/WebsiteUser/Index.cshtml
@@ -16,7 +16,7 @@
         <a href="@Url.Action("ViewBillingInfo","BillingInfo")"><button type="button" class="btn btn-secondary">My Billing Info</button></a>
         <a href="@Url.Action("ReviewsReceived","Review")"><button type="button" class="btn btn-secondary">Reviews Received</button></a>
         <a href="@Url.Action("ReviewsWritten","Review")"><button type="button" class="btn btn-secondary">Reviews Written</button></a>
-        <a href="@Url.Action("ViewProducts","Product")"><button type="button" class="btn btn-secondary">View Products</button></a>
+        <a href="@Url.Action("ViewProductsForSale","Product")"><button type="button" class="btn btn-secondary">View Products For Sale</button></a>
 
     </div>
 
