--- a/WebApplication/Views/Product/CreateProduct.cshtml
+++ b/WebApplication/Views/Product/CreateProduct.cshtml
@@ -6,7 +6,9 @@
 }
 
 <h2>Create Product</h2>
-
+<div>
+    <a asp-action="Index" asp-controller="WebsiteUser">Back to Home</a>
+</div>
 <h4>Product</h4>
 <hr />
 <div class="row">
@@ -49,7 +51,5 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
